<resources>
    <string name="app_name">BioLens</string>
    <string name="title_imaging">Imaging</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_info">Info</string>
    <string name="warn_required_permissions_denied">BioLens needs permission to capture images</string>
    <string name="start_session">Start</string>
    <string name="stop_session">Stop</string>
    <string name="settings">Settings</string>
    <string name="no_sessions">No sessions yet</string>
    <string name="session_name_hint">Enter session name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="warn_permanent_action">This cannot be undone</string>
    <string name="warn_delete_session">Are you sure you want to delete this session?</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="rename_session">Rename session</string>
    <string name="interval_dialog_title">Imaging Interval</string>
    <string name="OK">OK</string>
    <string name="unit_hours_short">h</string>
    <string name="unit_minutes_short">m</string>
    <string name="unit_seconds_short">s</string>
    <plurals name="unit_hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="unit_minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="unit_seconds">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>
    <string name="per_hour">per hour</string>
    <string name="service_active_session_notification_title">Imaging session in progress</string>
    <string name="service_active_session_notification_message">Please do not open any other camera apps</string>
    <string name="service_notification_channel">BioLens Imaging Service</string>
    <string name="active_session_indication">An image capture session is currently running.\nFeel free to turn off your device\'s screen!</string>
    <string name="default_session_name">Untitled session</string>
    <plurals name="unit_images">
        <item quantity="one">image</item>
        <item quantity="other">images</item>
    </plurals>
    <string name="time_delimiter">:</string>
    <string name="auto_stop">Auto-Stop</string>
    <string name="auto_stop_image">Count</string>
    <string name="auto_stop_time">Time</string>
    <string name="auto_stop_never">Never</string>
    <string name="auto_stop_dialog_title">Automatically stop after…</string>
    <string name="auto_stop_off_description">The session will continue until it is stopped manually or your device runs out of battery.</string>
    <string name="per_session">per session</string>
    <string name="background_session_complete_toast">Background session completed!</string>
    <string name="schedule_session">Schedule Session</string>
    <string name="share">Share</string>
    <string name="save_media_menu_title">Save to Gallery</string>
    <string name="image_saved_success">Image saved successfully</string>
    <string name="image_saved_failure">Failed to save image</string>
    <string name="image_crop_failure">Failed to crop image</string>
    <string name="go_to_settings">Continue to settings</string>
    <string name="warn_needs_alarm_permission">BioLens needs special permissions to schedule a future session</string>
    <string name="scheduled_session_indication">An image capture session is scheduled for %s (%s)</string>
    <string name="after">After</string>
    <string name="starts">Starts</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="interval">Interval</string>
    <string name="scheduling_conflict_dialog_title">Scheduling Conflict</string>
    <string name="schedule_anyway">Schedule Anyway</string>
    <string name="session_will_cancel">Scheduling this session will cause the session \"%s\" to terminate early.</string>
    <string name="session_will_be_cancelled">This session will be terminated early by the session \"%s\".</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="filter">Filter</string>
    <string name="show_all_images">Show all images</string>
    <string name="show_every_10">Show every 10th</string>
    <string name="show_every_25">Show every 25th</string>
    <string name="show_every_100">Show every 100th</string>
    <string name="showing_every_x">(showing every %dth)</string>
    <string name="waiting_internet">Waiting for Internet connection…</string>
    <string name="uploading_images">Uploading images…</string>
    <string name="upload_complete">Upload complete!</string>
    <string name="upload_failed">Upload failed</string>
    <string name="dismiss">Dismiss</string>
    <string name="retry">Retry</string>
    <string name="upload_cancelled">Upload cancelled</string>
    <string name="please_enable_camera">Please go to settings and enable camera access to use the imaging features</string>
    <string name="sort">Sort</string>
    <string name="oldest_first">Oldest first</string>
    <string name="newest_first">Newest first</string>
    <string name="preference_shutdown_camera_title">Turn off camera when possible</string>
    <string name="preference_shutdown_camera_description">Enabling this setting will improve battery life, but may introduce extra jitter in the timestamps of captured images</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="no_google_account">No Google account connected</string>
    <string name="signed_in_as_email">Signed in as %s</string>
    <string name="warn_sign_out">Are you sure you want to sign out?</string>
    <string name="please_sign_in">In order to upload images, please go to the settings tab and sign in to your Google account</string>
    <string name="cannot_sign_in">Cannot sign in</string>
    <string name="warn_no_google_services">This device does not support the required Google services</string>
    <string name="export_region">Export Region</string>
    <string name="export_crop">Export cropped</string>
    <string name="exporting_metadata">Exporting metadata…</string>
    <string name="connecting_to_drive">Connecting to Google Drive…</string>
    <string name="upload_notification_channel">BioLens Upload Service</string>
    <string name="uploading_session">Uploading session: %s</string>
    <string name="preference_location_tolerance_title">Location Tolerance (Minutes)</string>
    <string name="preference_location_tolerance_description">If the current location cannot be obtained, BioLens will use the last known location as long as it is not older than this value</string>
    <string name="reload">Reload</string>
    <string name="filesystem_error">The device\'s external storage could not be accessed. Please insert your SD card and press \"reload\", or contact the developers at <a href="mailto:automothdevs@gmail.com">automothdevs@gmail.com</a>.</string>
    <string name="failed_to_mount">Failed to mount, please try again.</string>
    <string name="session_not_found">Session not found</string>
    <string name="application_data_corrupted">Application data may have been corrupted or modified by an external source</string>
    <string name="image_not_found">Image not found</string>
    <string name="latitude">Latitude</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="longitude">Longitude</string>
    <string name="name">Name</string>
    <string name="date_started">Date Started</string>
    <string name="date_completed">Date Completed</string>
    <string name="save">Save</string>
    <string name="edit_metadata">Edit Metadata</string>
    <string name="unknown">unknown</string>
    <string name="device_type">Device</string>
    <string name="invalid_value">Invalid value</string>
    <string name="add_custom_metadata_field">Add Custom Metadata Field</string>
    <string name="custom_metadata_field_description">This field will be available on all sessions</string>

    <string name="add">Add</string>
    <string name="field_name">Field name</string>
    <string name="metadata_value_type">Value Type</string>
    <string name="default_metadata_header">Session Info</string>
    <string name="automoth_metadata_header">AutoMoth Metadata</string>
    <string name="user_metadata_header">User Metadata</string>
    <string name="edit">Edit</string>
    <string name="include_automoth_metadata">Include AutoMoth metadata</string>
    <string name="include_user_metadata">Include user metadata</string>
    <string name="upload_metadata_only">Upload metadata only</string>
    <string name="export_options">Export Options</string>
    <string name="export">Export</string>
    <string name="metadata">Metadata</string>
    <string name="undefined_toggle">N/A</string>
    <string name="warn_unsaved_changes">Exiting will discard your changes</string>
    <string name="warn_exit_metadata">Are you sure you want to leave this screen?</string>
    <string name="save_values">Save values</string>
    <string name="warn_fail_to_add_metadata">Could not add metadata field</string>
    <string name="delete_metadata_dialog_title">Are you sure you want to delete this field?</string>
    <string name="warn_delete_metadata">It will be removed from all existing sessions. This action cannot be undone.</string>
    <string name="failed_to_save_metadata">Failed to save metadata</string>
    <string name="metadata_saved">Metadata saved successfully!</string>
    <string name="metadata_filesystem_explanation">The session metadata and images can be accessed using the Android File Transfer app. This session is stored at Android/data/com.uf.biolens/files/%s"</string>
    <string name="export_to_filesystem">Export to filesystem</string>
    <string name="metadata_sheet_width_cm">Sheet width (cm)</string>
    <string name="metadata_sheet_height_cm">Sheet height (cm)</string>
    <string name="metadata_has_scale_bar">Has scale bar</string>
    <string name="metadata_has_color_standard">Has color standard</string>
    <string name="metadata_hardware_description">Hardware description</string>
    <string name="metadata_white_light_model">White light model</string>
    <string name="metadata_uv_light_model">UV light model</string>
    <string name="service_waiting_session_notification_title">"BioLens is waiting for a scheduled session  "</string>
    <string name="service_waiting_session_notification_message">You may turn off your device\'s screen</string>
    <string name="delete_session">Delete Session</string>
    <string name="warn_delete_images">Are you sure you want to delete the selected images?</string>
    <string name="n_images_selected">%d selected</string>
    <string name="select_underexposed">Select underexposed</string>
    <string name="preference_auto_upload_description">When enabled, BioLens will attempt to upload images immediately as they are captured</string>
    <string name="preference_auto_upload">Automatic Upload</string>
    <string name="service_waiting_for_autoupload">Finishing auto-upload</string>
    <string name="app_version">BioLens version %s</string>
    <string name="app_build">Build %d</string>
</resources>