<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/rename"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/edit_metadata"
        app:showAsAction="always" />
    <item
        android:id="@+id/upload"
        android:icon="@drawable/ic_cloud_upload_24"
        android:title="@string/upload"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/show_all_images"
                    android:checked="true"
                    android:title="@string/show_all_images" />
                <item
                    android:id="@+id/show_every_10"
                    android:title="@string/show_every_10" />
                <item
                    android:id="@+id/show_every_25"
                    android:title="@string/show_every_25" />
                <item
                    android:id="@+id/show_every_100"
                    android:title="@string/show_every_100" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>