<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/share_group">
        <item
            android:id="@+id/share_submenu"
            android:icon="@drawable/ic_share_24"
            android:title="@string/share"
            app:showAsAction="always">
            <menu>
                <item
                    android:id="@+id/save"
                    android:title="@string/save_media_menu_title" />
                <item
                    android:id="@+id/share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/share_crop"
                    android:title="@string/export_crop" />
            </menu>

        </item>
    </group>

</menu>