<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/label"
        style="@style/info_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="10dp"
        tools:text="This is a long metadata title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:checkedButton="@+id/undefined_toggle">

        <Button
            android:id="@+id/undefined_toggle"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/undefined_toggle" />

        <Button
            android:id="@+id/no_toggle"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/no" />

        <Button
            android:id="@+id/yes_toggle"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/yes" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>