<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.imaging.scheduler.ImagingSchedulerActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:id="@+id/interval_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_timer_24" />

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:text="@string/interval" />

            <TextView
                android:id="@+id/interval_text"
                style="@style/info_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:textAlignment="gravity"
                tools:text="2s" />

        </LinearLayout>

        <include layout="@layout/horizontal_divider" />

        <LinearLayout
            android:id="@+id/auto_stop_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_time_filled_24" />

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:text="@string/auto_stop" />

            <TextView
                android:id="@+id/auto_stop_text"
                style="@style/info_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:textAlignment="gravity"
                tools:text="Never" />

        </LinearLayout>

        <include layout="@layout/horizontal_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_calendar_month_24" />

            <TextView
                android:id="@+id/date"
                style="@style/info_medium"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textAlignment="center" />

            <include layout="@layout/vertical_divider" />

            <TextView
                android:id="@+id/time"
                style="@style/info_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time"
                android:textAlignment="center" />

        </LinearLayout>

        <include layout="@layout/horizontal_divider" />

        <EditText
            android:id="@+id/session_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/session_name_hint"
            android:singleLine="true" />

        <include layout="@layout/horizontal_divider" />

        <Button
            android:id="@+id/schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/schedule_session" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/session_card_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            tools:listitem="@layout/pending_session_list_item">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>