<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.imaging.ImagingFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/interval_description"
            style="@style/shadowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="5dp"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded"
            tools:text="Interval: 12s" />

        <Space
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/auto_stop_description"
            style="@style/shadowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded"
            tools:text="Auto-stop: after 12 images" />
    </LinearLayout>

    <TextView
        android:id="@+id/permission_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/please_enable_camera"
        android:textColor="@color/white"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/session_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/interval_button"
            style="@style/shadowed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/interval_dialog_title"
            android:src="@drawable/ic_timer_24"
            app:tint="@color/white" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/start_session" />

        <ImageButton
            android:id="@+id/auto_stop_button"
            style="@style/shadowed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/auto_stop"
            android:src="@drawable/ic_time_filled_24"
            app:tint="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>